fixed the font size of bottom menu on mobile (BMM)

--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -1579,7 +1579,7 @@ ubTitle {
 .bottomMenuText {
   align-items: center;
   text-align: center;
-  font-size: 13px;
+  font-size: 12px;
   font-weight: bold;
   width: 60px;
   margin-left: -20px;
